--- a/src/BaseService/BaseService.Host/appsettings.Development.json
+++ b/src/BaseService/BaseService.Host/appsettings.Development.json
@@ -1,38 +1,9 @@
 {
-  "AuthServer": {
-    "Authority": "http://localhost:5050",
-    "HttpsMetadata": false
-  },
-  "App": {
-    "CorsOrigins": "http://localhost:5050",
-    "DefaultPassword": "Cimc*888" //默认密码
-  },
-  "ConnectionStrings": {
-    "Default": "server=127.0.0.1,3306;database=cimc_iot;user=root;password=123qwe;charset=utf8;"
-  },
-  "Redis": {
-    "IsEnabled": true,
-    "Configuration": "127.0.0.1:6379,password=12345678,DefaultDatabase=5"
-  },
-  "AuthorityCache": {
-    "Configuration": "127.0.0.1:6379,password=12345678,DefaultDatabase=5"
-  },
-  "AllowedHosts": "*",
-  "UseSwagger": true,
-  "RabbitMQ": {
-    "Connections": {
-      "Default": {
-        "HostName": "10.47.102.70",
-        "UserName": "admin",
-        "Password": "123qwe",
-        "VirtualHost": "/",
-        "Port": 5672
-      }
-    },
-    "EventBus": {
-      "ClientName": "iot.base.service",
-      "ExchangeName": "iot.cap.exchange",
-      "DefaultQueue": "iot.cap.queue"
+  "Logging": {
+    "LogLevel": {
+      "Default": "Debug",
+      "System": "Information",
+      "Microsoft": "Information"
     }
   }
 }
