--- a/src/AuthServer/AuthServer.Host/appsettings.Development.json
+++ b/src/AuthServer/AuthServer.Host/appsettings.Development.json
@@ -1,26 +1,9 @@
 {
-  "AllowedHosts": "*",
-  "HealthChecksUI": {
-    "HealthChecks": [
-      {
-        "Name": "Health",
-        "Uri": "http://localhost:5050/health"
-      }
-    ],
-    "EvaluationTimeinSeconds": 10,
-    "MinimumSecondsBetweenFailureNotifications": 60
-  },
-  "ConnectionStrings": {
-    "Default": "server=127.0.0.1,3306;database=cimc_iot;user=root;password=123qwe;charset=utf8;"
-  },
-  "App": {
-    "CorsOrigins": "http://localhost:8060"
-  },
-  "Redis": {
-    "IsEnabled": false,
-    "Configuration": "127.0.0.1:6379,password=12345678,DefaultDatabase=5"
-  },
-  "MicroServices": [
-    "BaseService"
-  ]
+  "Logging": {
+    "LogLevel": {
+      "Default": "Information",
+      "Microsoft": "Warning",
+      "Microsoft.Hosting.Lifetime": "Information"
+    }
+  }
 }
