--- a/src/AuthServer/AuthServer.Host/appsettings.json
+++ b/src/AuthServer/AuthServer.Host/appsettings.json
@@ -1,27 +1,13 @@
 {
   "AllowedHosts": "*",
-  "HealthChecksUI": {
-    "HealthChecks": [
-      {
-        "Name": "Health",
-        "Uri": "http://localhost:5050/health"
-      }
-    ],
-    "EvaluationTimeinSeconds": 10,
-    "MinimumSecondsBetweenFailureNotifications": 60
-  },
   "ConnectionStrings": {
-    "Default": "server=127.0.0.1,3306;database=cimc_iot;user=root;password=123qwe;charset=utf8;"
+    "Default": "server=127.0.0.1,3306;database=newpt2_base;user=root;password=123qwe;charset=utf8;"
   },
   "App": {
     "CorsOrigins": "http://localhost:8060"
   },
   "Redis": {
-    "IsEnabled": false,
+    "IsEnabled": true,
     "Configuration": "127.0.0.1:6379,password=12345678,DefaultDatabase=5"
-  },
-  "UseSwagger": true,
-  "MicroServices": [
-    "BaseService"
-  ]
+  }
 }
