--- a/src/BaseService/BaseService.Host/appsettings.json
+++ b/src/BaseService/BaseService.Host/appsettings.json
@@ -1,14 +1,13 @@
 {
   "AuthServer": {
-    "Authority": "http://localhost:5050",
-    "HttpsMetadata": false
+    "Authority": "http://localhost:5050"
   },
   "App": {
     "CorsOrigins": "http://localhost:5050",
     "DefaultPassword": "Cimc*888" //默认密码
   },
   "ConnectionStrings": {
-    "Default": "server=127.0.0.1,3306;database=cimc_iot;user=root;password=123qwe;charset=utf8;"
+    "Default": "server=127.0.0.1,3306;database=newpt2_base;user=root;password=123qwe;charset=utf8;"
   },
   "Redis": {
     "IsEnabled": true,
@@ -30,9 +29,9 @@
       }
     },
     "EventBus": {
-      "ClientName": "iot.base.service",
-      "ExchangeName": "iot.cap.exchange",
-      "DefaultQueue": "iot.cap.queue"
+      "ClientName": "fishery-base.service",
+      "ExchangeName": "fishery-base.cap.exchange",
+      "DefaultQueue": "fishery-base.data.queue"
     }
   }
 }
