--- a/src/AuthServer/AuthServer.Host/appsettings.json
+++ b/src/AuthServer/AuthServer.Host/appsettings.json
@@ -9,5 +9,6 @@
   "Redis": {
     "IsEnabled": true,
     "Configuration": "127.0.0.1:6379,password=12345678,DefaultDatabase=5"
-  }
+  },
+  "MicroServices": [ "BaseService" ]
 }
