--- a/src/BaseService/BaseService.Host/appsettings.json
+++ b/src/BaseService/BaseService.Host/appsettings.json
@@ -11,10 +11,10 @@
   },
   "Redis": {
     "IsEnabled": true,
-    "Configuration": "127.0.0.1:6379,password=12345678,DefaultDatabase=5"
+    "Configuration": "127.0.0.1:6379,password=12345678,DefaultDatabase=2"
   },
   "AuthorityCache": {
-    "Configuration": "127.0.0.1:6379,password=12345678,DefaultDatabase=5"
+    "Configuration": "127.0.0.1:6379,password=12345678,DefaultDatabase=2"
   },
   "AllowedHosts": "*",
   "UseSwagger": true,
@@ -29,9 +29,9 @@
       }
     },
     "EventBus": {
-      "ClientName": "fishery-base.service",
-      "ExchangeName": "fishery-base.cap.exchange",
-      "DefaultQueue": "fishery-base.data.queue"
+      "ClientName": "base.service",
+      "ExchangeName": "base.cap.exchange",
+      "DefaultQueue": "base.data.queue"
     }
   }
 }
