--- a/src/BaseService/BaseService.HttpApi.Client/BaseService.HttpApi.Client.csproj
+++ b/src/BaseService/BaseService.HttpApi.Client/BaseService.HttpApi.Client.csproj
@@ -1,13 +1,13 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net6.0</TargetFramework>
+    <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Volo.Abp.Core" Version="6.0.3" />
-    <PackageReference Include="Volo.Abp.Http.Client" Version="6.0.3" />
+    <PackageReference Include="Volo.Abp.Core" Version="8.2.0" />
+    <PackageReference Include="Volo.Abp.Http.Client" Version="8.2.0" />
   </ItemGroup>
 
   <ItemGroup>
